# quickhull

./: CMakeLists.txt  README.md
include/: convex_hull.h  convex_hull.hpp  half_edge_mesh.h  half_edge_mesh.hpp  math_utils.h  math_utils.hpp  mesh.h  mesh.hpp  plane.hpp  quickhull.h  quickhull.hpp  vector3.hpp
src/: quickhull.cpp
tests/: QuickHullTests.cpp  test_quickhull.cpp
